# DocumentAIAnalyzer

./: .gitignore  app.py  models.py  pyproject.toml  routes.py
attached_assets/: Pasted--psycopg2-errors-UndefinedColumn-column-processing-attempts-of-relation-document-does-not-exist-1735465103202.txt  Pasted-MarkItDown-PyPI-PyPI-Downloads-Built-by-AutoGen-Team-MarkItDown-is-a-utility-for-converting-vari-1735462592029.txt
instance/: documents.db
migrations/versions/: add_doc_metadata.py  add_processing_columns.py
static/css/: style.css
static/js/: document-viewer.js  main.js
templates/: base.html  error_dashboard.html  index.html
uploads/: docx
utils/: ai_analyzer.py  document_processor.py
